--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SmtpCredentials": {
+    "UserName": "asp2022_5@rodion-m.ru",
+    "Password": "J8S*U*b&",
+    "Host": "smtp.beget.com",
+    "Port": 25
+  }
 }
